--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@nuxtjs/vuetify": "^0.4.2",
-    "nuxt": "^1.0.0"
+    "nuxt": "^1.0.0",
+    "vue-socket.io": "^2.1.1-b"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
