--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/vuetify": "^0.4.2",
+    "browser-detect": "^0.2.28",
     "nuxt": "^1.0.0",
     "vue-socket.io": "^2.1.1-b"
   },
