:wrench: Only start up socket.io in production.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Andrew Thompson <andrew.thompson@qmul.ac.uk>",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env NODE_ENV=dev nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/vuetify": "^0.4.2",
     "browser-detect": "^0.2.28",
+    "cross-env": "^5.2.0",
     "nuxt": "^1.0.0",
     "vue-socket.io": "^2.1.1-b"
   },
