--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browser-detect": "^0.2.28",
     "cross-env": "^5.2.0",
     "nuxt": "^1.0.0",
+    "tunajs": "^1.0.1",
     "vue-socket.io": "^2.1.1-b"
   },
   "devDependencies": {
